# C-Qt6-General-Robotic-Control-System-Demo

./: CMakeLists.txt  README.md  main.cpp  readme2.md  readme3.md  readme4.md  readme5.md  readme6.md  仿生视觉-电-神经统一界面核心方程推导.md  具身智能体自发理解涌现的进化博弈模拟.py  完整项目结构.txt  核心功能对应银河GR系列需求.xlsx  生命的起源  申明  申明2.md  系统架构总览.txt  运行效果说明.txt
core机器人运动学模型/: RobotModel.cpp  RobotModel.h  行为树引擎BehaviorTree.h
models数据模型定义/: RobotState.h
ui主窗口/: MainWindow.cpp
